--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
     particlesJS.load('particles-js', 'particles.json', function () {
-      console.log('callback - particles.js config loaded');
+      console.log('success');
     })</script>
 
 
