analytics added and seo improved

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <meta name="description" content="Personal Portfolio Website" />
+  <meta name="description" content="Hi, I'm Ayush! - software developer, with a passion for technology and learning. Always inspired by new idea, and willingness to contribute towards a valuable end product is what pushes me. This website is an effort to showcase my fun side projects, skills, that I have developed over the years and continue to do so.">
+  <meta name="keywords" content="Frontend Development, Frontend Developer, UI Developer, UI/UX, UX Evangelist, Computer Science, Engineering, Design, ReactJS, FrontEnd, JavaScript, Web Development, Ayush Aggarwal, Ayush Agarwal, Ayush Agrawal, Ayush, Aayush, Gozmit, Gozmit31, NIT Hamirpur, At Spinny, At HSBC, Experience, Software Developer, Software Engineer, Trellis, Trello Clone, ayushagg31, ayushagg_31, Ayush_agg, Aayush Aggarwal">
+  <meta property="og:title" content="Ayush Aggarwal - Frontend Developer" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Ayush Aggarwal" />
+  <meta property="og:image" content="./portfolio-image.jpeg" />
+  <meta property="og:url" content="https://ayushaggarwal.com/" />
+  
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TQMRF6K');</script>
+  <!-- End Google Tag Manager -->
+ 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Ayush Aggarwal</title>
+  <title>Ayush Aggarwal | Frontend Developer</title>
 </head>
 
 <body>
+  
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQMRF6K"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <div id="particles-js"></div>
   <div id="root"></div>
   </div>
