--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Ayush Aggarwal | Frontend Developer</title>
+  <title>Ayush Aggarwal</title>
 </head>
 
 <body>
@@ -35,18 +35,12 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   
-  <div id="particles-js"></div>
   <div id="root"></div>
   </div>
 
   <script>
     document.documentElement.style.setProperty('--vh', `${window.innerHeight / 100}px`);
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS.load('particles-js', 'particles.json', function () {
-      console.log('success');
-    })</script>
 
 
 </body>
